2013-04-29  Sergio Martin <sergio.martin@artica.es>

	* include/functions.php
	include/javascript/pandora_modules.js
	include/javascript/pandora.js
	index.php
	ajax.php: Added a simple system of interchange of
	data from php to javascript with invisible divs.
	Fixed ajax call of server plugin components macros
	for bug 3612145

2013-04-26  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css: Fix aesthetical issues

	* include/functions_modules.php: Mark as needy to calculate
	the module status count in an agent when disable/enable one of
	his modules. The part of server to avoid disabled modules in
	counts was made by ramon. BUG #3611683

	* godmode/users/configure_user.php: Fix warnings due the 
	latest fields added to database schemma

	* images/blank.gif: Add a missed image

	* godmode/agentes/agent_template.php: Fix a little feedback
	bug on template application and add category id to the 
	fields copied from components to modules when apply a template

2013-04-25 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/users/user_list.php: changed the table layout and other
	stetical things.
	
	Fixes: #3611684
	
	* include/functions_html.php: cleaned the source code style.

2013-04-25 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/alerts/alert_list.list.php,
	godmode/setup/setup_general.php, extensions/pandora_logs.php: some
	fixes in the source code from the indications of bug in the tracker.
	
	Fixes: #3611333

2013-04-25 Miguel de Dios <miguel.dedios@artica.es>

	* extensions/agents_modules.php: changed the header of the table
	agents modules, now it uses css3 (and some tricks in javascript)
	and the text for the modules is vertical.
	
	Fixes: #3539424
	
	* operation/integria_incidents/incident.list.php,
	operation/search_users.getdata.php,
	godmode/servers/manage_recontask_form.php,
	godmode/massive/massive_delete_action_alerts.php,
	godmode/modules/manage_network_components_form.php: improved the
	source code style.
